force-app/main/default/objects/Invoice__c/fields/Allow_Online_Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Online_Credit_Card_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Online Credit Card Payment</label>
    <type>Checkbox</type>
</CustomField>