force-app/main/default/objects/Invoice__c/fields/Apply_Tax_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_Tax_After_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Tax After Discount</label>
    <type>Checkbox</type>
</CustomField>