force-app/main/default/objects/Invoice__c/fields/Currency_Ref__c.field-meta.xml
<CustomField>
    <fullName>Currency_Ref__c</fullName>
    <label>Currency Ref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>