force-app/main/default/objects/Invoice__c/fields/Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Doc_Number__c</fullName>
    <label>Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>