force-app/main/default/objects/Invoice__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotSet</fullName>
            </value>
            <value>
                <fullName>NeedToSend</fullName>
            </value>
            <value>
                <fullName>EmailSent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>