force-app/main/default/objects/Invoice__c/fields/FreeForm_Address__c.field-meta.xml
<CustomField>
    <fullName>FreeForm_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FreeForm Address</label>
    <type>Checkbox</type>
</CustomField>