force-app/main/default/objects/Invoice__c/fields/Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Link__c</fullName>
    <label>Invoice Link</label>
    <type>Url</type>
</CustomField>