force-app/main/default/objects/Invoice__c/fields/QB_Customer_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_ID_formula__c</fullName>
    <formula>Customer__r.Customer_QB_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Customer ID formula</label>
    <type>Text</type>
</CustomField>