force-app/main/default/objects/Invoice__c/fields/QB_Customer_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_Ref__c</fullName>
    <label>QB Customer Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>