force-app/main/default/objects/Invoice__c/fields/QB_Email__c.field-meta.xml
<CustomField>
    <fullName>QB_Email__c</fullName>
    <label>QB Email</label>
    <type>Email</type>
</CustomField>