force-app/main/default/objects/Invoice__c/fields/Tax_Code_Ref_QBO_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_Ref_QBO_Id__c</fullName>
    <formula>CASE( Tax_Code_References__c ,
&quot;Anaheim, CA&quot;, &quot;60&quot;,
&quot;Aurora, CO&quot;, &quot;74&quot;,
&quot;Beaumont, TX&quot;, &quot;69&quot;,
&quot;BKLN &amp; BRNX Special - Inactive&quot;, &quot;5&quot;,
&quot;Bloomington, MN&quot;, &quot;32&quot;,
&quot;Boston, MA&quot;, &quot;36&quot;,
&quot;Boynton Beach, FL&quot;, &quot;30&quot;,
&quot;CA&quot;, &quot;20&quot;,
&quot;CALEDONIA, MI&quot;, &quot;43&quot;,
&quot;Canandaigua, NY&quot;, &quot;44&quot;,
&quot;Canoga Park, CA&quot;, &quot;61&quot;,
&quot;Canton, MI&quot;, &quot;42&quot;,
&quot;Chapel Hill, NC&quot;, &quot;71&quot;,
&quot;Charlotte, NC&quot;, &quot;73&quot;,
&quot;Chicago, IL&quot;, &quot;27&quot;,
&quot;Cincinnati, OH&quot;, &quot;22&quot;,
&quot;Connecticut&quot;, &quot;21&quot;,
&quot;CT - Inactive&quot;, &quot;6&quot;,
&quot;Denver, CO&quot;, &quot;23&quot;,
&quot;Des Plaines, IL&quot;, &quot;25&quot;,
&quot;Detroit, MI&quot;, &quot;35&quot;,
&quot;Farmington Hills, MI&quot;, &quot;62&quot;,
&quot;Fife, WA&quot;, &quot;52&quot;,
&quot;Grand Prairie, TX&quot;, &quot;33&quot;,
&quot;Greensboro, NC&quot;, &quot;63&quot;,
&quot;Houston, TX&quot;, &quot;64&quot;,
&quot;Inglewood, CA&quot;, &quot;59&quot;,
&quot;King Of Prussia, PA&quot;, &quot;47&quot;,
&quot;Las Vegas, NV&quot;, &quot;45&quot;,
&quot;Lawrenceville,GA&quot;, &quot;39&quot;,
&quot;Long Beach, CA&quot;, &quot;28&quot;,
&quot;Los Angeles, CA&quot;, &quot;29&quot;,
&quot;Marlborough, MA&quot;, &quot;66&quot;,
&quot;Miami, FL&quot;, &quot;65&quot;,
&quot;Mokena, IL&quot;, &quot;48&quot;,
&quot;Mount Vernon&quot;, &quot;7&quot;,
&quot;New Bedford, MA&quot;, &quot;75&quot;,
&quot;New Jersey&quot;, &quot;51&quot;,
&quot;New Rochelle&quot;, &quot;8&quot;,
&quot;NJ - Inactive&quot;, &quot;9&quot;,
&quot;non TAX&quot;, &quot;4&quot;,
&quot;NYC&quot;, &quot;3&quot;,
&quot;Oak Brooke, IL&quot;, &quot;40&quot;,
&quot;Onondaga Cty&quot;, &quot;10&quot;,
&quot;Oriskany, N.Y.&quot;, &quot;58&quot;,
&quot;Oriskany, NY - Inactive&quot;, &quot;56&quot;,
&quot;Orlando, FL&quot;, &quot;34&quot;,
&quot;Oxnard, CA&quot;, &quot;26&quot;,
&quot;Phelps, N.Y.&quot;, &quot;57&quot;,
&quot;Phelps, NY - Inactive&quot;, &quot;55&quot;,
&quot;Pompano Beach, FL&quot;, &quot;67&quot;,
&quot;Putnam&quot;, &quot;11&quot;,
&quot;Rhode Island&quot;, &quot;31&quot;,
&quot;Richardson, TX&quot;, &quot;19&quot;,
&quot;Richardson, TX - Inactive&quot;, &quot;18&quot;,
&quot;RKLND&quot;, &quot;12&quot;,
&quot;Sales Tax&quot;, &quot;2&quot;,
&quot;Salt Lake City, Utah&quot;, &quot;46&quot;,
&quot;Saratoga County&quot;, &quot;13&quot;,
&quot;Smithfield, RI&quot;, &quot;72&quot;,
&quot;Springfield, MA&quot;, &quot;68&quot;,
&quot;Stockton, CA&quot;, &quot;38&quot;,
&quot;Stockton, CA - Inactive&quot;, &quot;37&quot;,
&quot;Sunnyvale, CA&quot;, &quot;24&quot;,
&quot;Syracuse NY&quot;, &quot;16&quot;,
&quot;TBA&quot;, &quot;53&quot;,
&quot;TBD&quot;, &quot;54&quot;,
&quot;Westchester&quot;, &quot;14&quot;,
&quot;White Plains&quot;, &quot;70&quot;,
&quot;White Plains - Inactive&quot;, &quot;15&quot;,
&quot;Woodridge, IL&quot;, &quot;41&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code Ref (QBO Id)</label>
    <type>Text</type>
</CustomField>