force-app/main/default/objects/Invoice__c/fields/Tax_Code_References__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_References__c</fullName>
    <label>Tax Code References</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anaheim, CA</fullName>
            </value>
            <value>
                <fullName>Aurora, CO</fullName>
            </value>
            <value>
                <fullName>Beaumont, TX</fullName>
            </value>
            <value>
                <fullName>BKLN &amp; BRNX Special - Inactive</fullName>
            </value>
            <value>
                <fullName>Bloomington, MN</fullName>
            </value>
            <value>
                <fullName>Boston, MA</fullName>
            </value>
            <value>
                <fullName>Boynton Beach, FL</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CALEDONIA, MI</fullName>
            </value>
            <value>
                <fullName>Canandaigua, NY</fullName>
            </value>
            <value>
                <fullName>Canoga Park, CA</fullName>
            </value>
            <value>
                <fullName>Canton, MI</fullName>
            </value>
            <value>
                <fullName>Chapel Hill, NC</fullName>
            </value>
            <value>
                <fullName>Charlotte, NC</fullName>
            </value>
            <value>
                <fullName>Chicago, IL</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>CT - Inactive</fullName>
            </value>
            <value>
                <fullName>Denver, CO</fullName>
            </value>
            <value>
                <fullName>Des Plaines, IL</fullName>
            </value>
            <value>
                <fullName>Detroit, MI</fullName>
            </value>
            <value>
                <fullName>Farmington Hills, MI</fullName>
            </value>
            <value>
                <fullName>Fife, WA</fullName>
            </value>
            <value>
                <fullName>Grand Prairie, TX</fullName>
            </value>
            <value>
                <fullName>Greensboro, NC</fullName>
            </value>
            <value>
                <fullName>Houston, TX</fullName>
            </value>
            <value>
                <fullName>Inglewood, CA</fullName>
            </value>
            <value>
                <fullName>King Of Prussia, PA</fullName>
            </value>
            <value>
                <fullName>Las Vegas, NV</fullName>
            </value>
            <value>
                <fullName>Lawrenceville,GA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>