force-app/main/default/objects/Invoice__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <label>Transaction Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>